--- a/Health4life/Health4life.csproj
+++ b/Health4life/Health4life.csproj
@@ -269,6 +269,7 @@
     <Content Include="Content\themes\default\bootstrap.min.css">
       <DependentUpon>bootstrap.less</DependentUpon>
     </Content>
+    <Content Include="Content\health4life.css" />
     <Content Include="Content\themes\readable\bootstrap.css">
       <DependentUpon>bootstrap.less</DependentUpon>
     </Content>
@@ -370,6 +371,7 @@
     <None Include="Content\themes\readable\variables.less" />
     <None Include="Content\themes\readable\bootstrap.less" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="robots.txt" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\html5shiv.js" />
@@ -379,6 +381,8 @@
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
+    <Content Include="Scripts\jquery.roundabout.js" />
+    <Content Include="Scripts\jquery.roundabout.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
