--- a/Health4life/Web.config
+++ b/Health4life/Web.config
@@ -8,9 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-Health4life-20131025101239;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-Health4life-20131025101239.mdf" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config"/>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
