--- a/Health4life/Health4life.csproj
+++ b/Health4life/Health4life.csproj
@@ -198,6 +198,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="ViewModel\ActivitiesVm.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UserAreaController.cs" />
     <Compile Include="Global.asax.cs">
@@ -205,13 +206,20 @@
     </Compile>
     <Compile Include="InitDb.cs" />
     <Compile Include="Models\Activity.cs" />
+    <Compile Include="ViewModel\ActivityDto.cs" />
+    <Compile Include="Models\BaseEntity.cs" />
     <Compile Include="Models\LocalPasswordModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Models\RegisterModel.cs" />
+    <Compile Include="Models\ShareKey.cs" />
+    <Compile Include="ViewModel\UserAreaVm.cs" />
     <Compile Include="Models\UserProfile.cs" />
-    <Compile Include="Models\UsersContext.cs" />
+    <Compile Include="Models\H4LContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ActivityRepository.cs" />
+    <Compile Include="Repositories\ShareKeyRepository.cs" />
     <Compile Include="ViewModel\ConnectHubVm.cs" />
+    <Compile Include="ViewModel\ShareKeyDto.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="connectionStrings.config">
@@ -224,6 +232,7 @@
       <DependentUpon>bootstrap.less</DependentUpon>
     </Content>
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\select2\select2.css" />
     <Content Include="Content\themes\amelia\bootstrap.css">
       <DependentUpon>bootstrap.less</DependentUpon>
     </Content>
@@ -439,6 +448,7 @@
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\less-1.4.1.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\select2.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
